# treetags

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PLUGINS_TOML_SCHEMA.md  README.md  WASM_PLUGINS.md  build.rs
.github/workflows/: ci.yml  publish-plugins.yml  release.yml  test.yml
crates/treetags-cli/: Cargo.toml
crates/treetags-cli/src/: main.rs
crates/treetags-common/: Cargo.toml
crates/treetags-common/src/: helper.rs  lib.rs  tag.rs  tree_walker.rs
crates/treetags-core/: Cargo.toml
crates/treetags-core/src/: built_in_grammars.rs  config.rs  file_finder.rs  parser.rs  queries.rs  tag.rs  tag_processor.rs  tag_writer.rs  tags_config.rs
crates/treetags-core/src/config/: extras_config.rs  fields_config.rs  user_grammars.rs
crates/treetags-core/src/parser/: common.rs  cpp.rs  go.rs  helper.rs  js.rs  python.rs  rust.rs  typescript.rs
crates/treetags-core/src/parser/common/: tag_config.rs  tree_walker.rs
plugins/common/: Cargo.toml
plugins/common/src/: lib.rs  tag_config.rs  tree_walker.rs
plugins/echo/: Cargo.toml  plugin.toml
plugins/echo/src/: lib.rs
plugins/java/: Cargo.toml  plugin.toml
plugins/java/src/: lib.rs
plugins/typescript/: Cargo.toml
plugins/typescript/src/: lib.rs
plugins_index/: abis.json  index.md
plugins_index/3/: index.json  index.md
queries/: bash.scm  csharp.scm  gleam.scm  haskell.scm  julia.scm  kotlin.scm  scala.scm
scripts/: publish-plugins.sh
src/: built_in_grammars.rs  builtin_langs.rs  c.rs  config.rs  cpp.rs  elixir.rs  file_finder.rs  go.rs  java.rs  js.rs  kinds_listing.rs  lang_resolve.rs  language_parser.rs  lib.rs  lua.rs  main.rs  ocaml.rs  parser.rs  php.rs  python.rs  queries.rs  ruby.rs  rust.rs  shell_to_regex.rs  split_by_newlines.rs  tag.rs  tag_processor.rs  tag_writer.rs  tags_config.rs  typescript.rs  user_grammars.rs
src/config/: extras_config.rs  fields_config.rs  lang_map.rs  paths.rs  plugin_config.rs  user_grammars.rs  user_languages.rs
src/parser/: cpp.rs  go.rs  helper.rs  js.rs  python.rs  rust.rs  typescript.rs
src/parser/common/: tag_config.rs  tree_walker.rs
src/parsers/: mod.rs  ocaml_parser.rs  rust_parser.rs
src/parsers/ocaml/: scanner.c
src/parsers/rust/: scanner.c
src/parsers/rust/queries/: tags.scm
src/parsers/rust/tree_sitter/: alloc.h  array.h
src/plugin/: client.rs  index.rs  instance.rs  manifest.rs  mod.rs  registry.rs  shared.rs
tests/: bash_test.rs  c_sharp_test.rs  go_test.rs  golden_file_runner.rs  integration_tests.rs  js_test.rs  python_test.rs  ruby_test.rs  rust_test.rs
tests/grammars/tree-sitter-gleam/: parser.c  scanner.c
tests/grammars/tree-sitter-kotlin/: README.md  scanner.c
tests/helpers/: file_utils.rs  golden_test_runner.rs  mod.rs  test_runner.rs
tests/test_cases/bash/basic/expected/: stdout.txt
tests/test_cases/bash/basic/input/: args.txt  source.sh
tests/test_cases/c/basic/expected/: stdout.txt
tests/test_cases/c/basic/input/: args.txt  source.c
tests/test_cases/c/header_selector/expected/: stdout.txt
tests/test_cases/c/header_selector/input/: api.h  args.txt
tests/test_cases/c/langmap_custom_ext/expected/: stdout.txt
tests/test_cases/c/langmap_custom_ext/input/: args.txt  widget.qc
tests/test_cases/c_sharp/basic/expected/: stdout.txt
tests/test_cases/c_sharp/basic/input/: args.txt  source.cs
tests/test_cases/cpp/basic/expected/: stdout.txt
tests/test_cases/cpp/basic/input/: args.txt  source.cpp
tests/test_cases/cpp/extra_args/expected/: stdout.txt
tests/test_cases/cpp/extra_args/input/: args.txt  source.cpp
tests/test_cases/cpp/header_selector/expected/: stdout.txt
tests/test_cases/cpp/header_selector/input/: args.txt  widget.h
tests/test_cases/gleam/basic/expected/: stdout.txt
tests/test_cases/gleam/basic/input/: args.txt  source.gleam  user_grammar.toml
tests/test_cases/go/basic/expected/: stdout.txt
tests/test_cases/go/basic/input/: args.txt  source.go
tests/test_cases/go/extra_args/expected/: stdout.txt
tests/test_cases/go/extra_args/input/: args.txt  source.go
tests/test_cases/haskell/basic/expected/: stdout.txt
tests/test_cases/haskell/basic/input/: args.txt  source.hs
tests/test_cases/java_plugin/basic/expected/: stdout.txt
tests/test_cases/java_plugin/basic/input/: args.txt  source.java
tests/test_cases/java_plugin/extra_args/expected/: stdout.txt
tests/test_cases/java_plugin/extra_args/input/: args.txt
tests/test_cases/js/basic/expected/: stdout.txt
tests/test_cases/js/basic/input/: args.txt  source.js
tests/test_cases/julia/basic/expected/: stdout.txt
tests/test_cases/julia/basic/input/: args.txt  source.jl
tests/test_cases/kotlin/basic/expected/: stdout.txt
tests/test_cases/kotlin/basic/input/: queries.scm  source.kt  user_grammar.toml
tests/test_cases/kotlin/built_in_fallbacks/expected/: stdout.txt
tests/test_cases/kotlin/built_in_fallbacks/input/: args.txt  user_grammar.toml
tests/test_cases/list_kinds/java_plugin/expected/: stdout.txt
tests/test_cases/list_kinds/java_plugin/input/: args.txt
tests/test_cases/list_kinds/no_lang/expected/: stdout.txt
tests/test_cases/list_kinds/no_lang/input/: args.txt
tests/test_cases/list_kinds/rust/expected/: stdout.txt
tests/test_cases/list_kinds/rust/input/: args.txt
tests/test_cases/plugin/basic/expected/: stdout.txt
tests/test_cases/plugin/basic/input/: args.txt
tests/test_cases/python/basic/expected/: stdout.txt
tests/test_cases/python/basic/input/: args.txt  source.py
tests/test_cases/python/langmap_rexpr/expected/: stdout.txt
tests/test_cases/python/langmap_rexpr/input/: args.txt
tests/test_cases/python/modeline_emacs_local_vars/expected/: stdout.txt
tests/test_cases/python/modeline_emacs_local_vars/input/: args.txt  script.txt
tests/test_cases/python/modeline_vim/expected/: stdout.txt
tests/test_cases/python/modeline_vim/input/: args.txt  notes.txt
tests/test_cases/python/shebang_env/expected/: stdout.txt
tests/test_cases/python/shebang_env/input/: args.txt  deploy
tests/test_cases/ruby/basic/input/: args.txt  (+1 more)
wit/: treetags-plugin.wit  treetags.wit
(+20 files in other folders)
