[workspace]
resolver = "2"
members = [
    "crates/treetags-core",
    "crates/treetags-cli",
    "plugins/typescript",
]

[workspace.dependencies]
treetags-core = { path = "crates/treetags-core" }
clap = { version = "4.5.27", features = ["derive"] }
clap_complete = "4.5"
dirs = "6.0.0"
indexmap = "2.0"
libloading = "0.9.0"
regex = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
tree-sitter = "0.26.5"
wasmtime = { version = "40.0.4", features = ["component-model"] }
wasmtime-wasi = "40.0.4"
walkdir = "2"
xdg = "2.5"

# Language parsers
tree-sitter-bash = "0.23.3"
tree-sitter-c = "0.23.4"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.23.2"
tree-sitter-elixir = "0.3.3"
tree-sitter-go = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.23.1"
tree-sitter-julia = "0.23.1"
tree-sitter-lua = "0.2.0"
tree-sitter-ocaml = "0.24.0"
tree-sitter-php = "0.23.11"
tree-sitter-python = "0.23.6"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.23.2"
tree-sitter-scala = "0.24.0"
tree-sitter-tags = "0.26.5"
tree-sitter-typescript = "0.23.2"
