[workspace]
members = [".", "plugins/common", "plugins/echo", "plugins/java"]
resolver = "2"

[package]
name = "treetags"
version = "0.9.0"
edition = "2021"
license = "MIT"
description = "Generate vi compatible tags for multiple languages"
repository = "https://github.com/jha-naman/treetags"
readme = "README.md"
categories = ["development-tools", "command-line-utilities"]
default-run = "treetags"

exclude = ["tests/", ".github/", "plugins/"]

[dependencies]
anyhow = "1"
wasmtime = { version = "45", features = ["cranelift", "component-model"] }
wasmtime-wasi = "45"
clap = { version = "4.5.27", features = ["derive", "string"] }
clap_complete = "4.5"
dirs = "6.0.0"
indexmap = "2.0"
libloading = "0.9.0"
regex = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
tree-sitter = "0.26.5"
tree-sitter-bash = "0.23.3"
tree-sitter-c = "0.23.4"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.23.2"
tree-sitter-elixir = "0.3.3"
tree-sitter-go = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.23.1"
tree-sitter-julia = "0.23.1"
tree-sitter-lua = "0.2.0"
tree-sitter-ocaml = "0.24.0"
tree-sitter-php = "0.23.11"
tree-sitter-python = "0.23.6"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.23.2"
tree-sitter-scala = "0.24.0"
tree-sitter-tags = "0.26.5"
tree-sitter-typescript = "0.23.2"
walkdir = "2"
xdg = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.0"
similar = "2.4"
shlex = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.27.0"

[build-dependencies]
walkdir = "2"
cc = "1"

[[bin]]
name = "treetags"
path = "src/main.rs"

[[bin]]
name = "treetags-build-plugin"
path = "src/bin/build_plugin.rs"

[lib]
name = "treetags"
path = "src/lib.rs"
