[package]
name = "treetags"
version = "0.7.0"
edition = "2021"
license = "MIT"
description = "Generate vi compatible tags for multiple languages"
repository = "https://github.com/jha-naman/treetags"
readme = "../../README.md"
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "treetags"
path = "src/main.rs"

[dependencies]
treetags-core = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.0"
similar = "2.4"
shlex = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
