[package]
name = "treetags-core"
version = "0.7.0"
edition = "2021"

[dependencies]
treetags-common = { path = "../treetags-common" }
treetags-typescript = { path = "../../plugins/typescript", optional = true }
clap = { workspace = true }
clap_complete = { workspace = true }
dirs = { workspace = true }
indexmap = { workspace = true }
libloading = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tree-sitter = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
walkdir = { workspace = true }
xdg = { workspace = true }

tree-sitter-bash = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-c-sharp = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-css = { workspace = true }
tree-sitter-elixir = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-julia = { workspace = true }
tree-sitter-lua = { workspace = true }
tree-sitter-ocaml = { workspace = true }
tree-sitter-php = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-ruby = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-scala = { workspace = true }
tree-sitter-tags = { workspace = true }
tree-sitter-typescript = { workspace = true }

[features]
builtin-typescript = ["dep:treetags-typescript"]

[build-dependencies]
walkdir = "2"
cc = "1"

