[package]
name = "treetags-typescript"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
treetags-common = { path = "../../crates/treetags-common" }
wit-bindgen = { version = "0.36.0", optional = true }
indexmap = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-typescript = { workspace = true }

[features]
guest = ["dep:wit-bindgen"]

[package.metadata.component]
package = "treetags:plugin"
